# nous

./: .clippy.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  demo.cast  demo.sh  justfile  prek.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/nous-cli/: Cargo.toml  README.md
crates/nous-cli/src/: daemon_api.rs  main.rs  server.rs  tools.rs
crates/nous-cli/src/commands/: admin.rs  agent.rs  artifact.rs  chat.rs  doctor.rs  inventory.rs  llm.rs  mcp_server.rs  memory.rs  mod.rs  model.rs  notifications.rs  output.rs  query.rs  reload.rs  resource.rs  schedule.rs  serve.rs  skill.rs  status.rs  stop.rs  task.rs  tool.rs  trace.rs  worktree.rs
crates/nous-cli/tests/: agent_add_remove.rs  concurrent.rs  daemon_lifecycle.rs  export_import.rs  integration.rs  room_e2e.rs  schedule_e2e.rs  search_ranking.rs  skill_list.rs
crates/nous-core/: Cargo.toml  README.md  build.rs
crates/nous-core/src/: channel.rs  chunk.rs  classify.rs  config.rs  cron_parser.rs  db.rs  embed.rs  error.rs  fts.rs  lib.rs  model.rs  schedule_db.rs  scheduler.rs  search.rs  sqlite_vec.rs  types.rs
crates/nous-core/src/agents/: coordination.rs  definition.rs  mod.rs  processes.rs  sandbox.rs
crates/nous-core/src/db/: mod.rs  pool.rs
crates/nous-core/src/db/migrations/vec/: 001_schema_version.sql
crates/nous-core/src/entities/: agent_invocations.rs  agent_processes.rs  agent_relationships.rs  agent_templates.rs  agent_versions.rs  agent_workspace_access.rs  agents.rs  artifacts.rs  inventory.rs  memories.rs  memory_access_log.rs  memory_relations.rs  memory_sessions.rs  message_cursors.rs  mod.rs  notification_queue.rs  resources.rs  room_messages.rs  room_subscriptions.rs  rooms.rs  schedule_runs.rs  schedules.rs  search_events.rs  task_dependencies.rs  task_events.rs  task_links.rs  task_templates.rs  tasks.rs  worktrees.rs
crates/nous-core/src/inventory/: mod.rs
crates/nous-core/src/memory/: analytics.rs  chunk.rs  decay.rs  embed.rs  mod.rs  rerank.rs  search.rs  store.rs  types.rs  vector_store.rs
crates/nous-core/src/messages/: mod.rs  search.rs  store.rs  types.rs
crates/nous-core/src/net/: mod.rs  url_validator.rs
crates/nous-core/src/notifications/: mod.rs
crates/nous-core/src/resources/: mod.rs  store.rs  types.rs
crates/nous-core/src/rooms/: mod.rs
crates/nous-core/src/schedules/: cron_parser.rs  mod.rs
crates/nous-core/src/tasks/: events.rs  mod.rs  search.rs  store.rs  types.rs
crates/nous-core/src/tools/: execution.rs  mod.rs  permissions.rs  registry.rs  rig_bridge.rs  services.rs
crates/nous-core/src/tools/builtin/: code.rs  comms.rs  filesystem.rs  http.rs  memory.rs  mod.rs  shell.rs
crates/nous-core/src/tools/custom/: mod.rs  script_tool.rs
crates/nous-core/src/worktrees/: mod.rs
crates/nous-core/tests/: access_tests.rs  channel_tests.rs  chunk_storage_tests.rs  chunk_tests.rs  classify_tests.rs  crud_tests.rs  db_tests.rs  db_vec0_tests.rs  decoder_round_trip_tests.rs  definition_examples.rs  embed_tests.rs  embed_unit_tests.rs  encoder_round_trip_tests.rs  model_tests.rs  pool_tests.rs  room_tests.rs  scheduler_integration.rs  search_tests.rs  sqlite_vec.rs  test_agents.rs  test_chunks.rs  test_coordination.rs  test_cron_proptest.rs  test_inventory.rs  test_migration_026_sandbox.rs  test_processes.rs  test_schedules.rs  test_search_analytics.rs  test_tasks.rs  test_unicode_boundary.rs  test_vec.rs  test_worktrees.rs  types_tests.rs
crates/nous-core/tests/common/: mod.rs
crates/nous-core/tests/fixtures/: embedding_vectors.json
crates/nous-daemon/: Cargo.toml
crates/nous-daemon/src/: agent_memory.rs  auth.rs  embedding.rs  error.rs  lib.rs  llm_client.rs  main.rs  metrics.rs  process_manager.rs  rate_limit.rs  response.rs  sandbox.rs  scheduler.rs  state.rs  vector_store.rs
crates/nous-daemon/src/routes/: agents.rs  health.rs  inventory.rs  mcp.rs  memory.rs  messages.rs  mod.rs  resources.rs  rooms.rs  schedules.rs  search.rs  tasks.rs  worktrees.rs
crates/nous-daemon/src/routes/mcp/: agents.rs  memory.rs  messages.rs  mod.rs  resources.rs  rooms.rs  tasks.rs
crates/nous-daemon/tests/: integration.rs  sandbox_integration.rs  test_appstate_fixture.rs  test_auth.rs  test_concurrency.rs  test_llm_invoke.rs  test_mcp_tools.rs  test_rate_limit.rs  test_rig_multi_provider.rs  test_routes.rs  test_scheduler.rs
crates/nous-daemon/tests/common/: mod.rs
crates/nous-mcp/: Cargo.toml  README.md
crates/nous-mcp/src/: commands.rs  config.rs  daemon.rs  daemon_api.rs  daemon_client.rs  lib.rs  main.rs  server.rs  tools.rs
crates/nous-mcp/src/commands/: admin.rs  category.rs  memory.rs  mod.rs  model.rs  query.rs  room.rs  schedule.rs  trace.rs
crates/nous-mcp/tests/: concurrent.rs  export_import.rs  integration.rs  room_e2e.rs  schedule_e2e.rs  search_ranking.rs
crates/nous-otlp/: Cargo.toml  README.md
crates/nous-otlp/src/: db.rs  decode.rs  lib.rs  main.rs  server.rs
crates/nous-otlp/tests/: ingestion.rs
crates/nous-pcl/: Cargo.toml
crates/nous-pcl/src/: collector.rs  directory.rs  error.rs  git.rs  lib.rs  metadata.rs  pipeline.rs  registry.rs  snapshot.rs  transform.rs
crates/nous-pcl/tests/: e2e.rs  integration.rs
crates/nous-shared/: Cargo.toml  README.md
crates/nous-shared/src/: error.rs  ids.rs  lib.rs  sqlite.rs  xdg.rs
crates/nous-shared/tests/: error_tests.rs  ids_tests.rs  key_rotation_tests.rs  sqlite_tests.rs  xdg_tests.rs
demos/: agent-lifecycle.cast
docs/: agent-management.md  claude-code-setup.md  cli-design.md  cli-restructuring.md  design-rooms.md  versioning-and-migrations.md
examples/: 01-getting-started.sh  02-agent-lifecycle.sh  03-invoke-agent.sh  04-configuration.sh  05-agent-definitions.sh  06-sandbox-agents.sh  07-daemon-management.sh  README.md  agent_demo.sh  sample-agent.toml
systemd/: install.sh  nous-cli.service  nous-mcp.service
tests/: e2e.sh
tests/correlation/: Cargo.toml  README.md
tests/correlation/tests/: correlation.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/tests/: daemon.rs  e2e.rs  model_setup.rs  rooms.rs
(+66 files in other folders)
