[workspace]
members = ["crates/nous-core", "crates/nous-cli", "crates/nous-daemon"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
anyhow = "1"
