[workspace]
members = ["crates/nous-core", "crates/nous-cli", "crates/nous-daemon", "crates/nous-migration"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
ort = "2.0.0-rc.12"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
toml = "0.8"
dirs = "6"
rig-core = "0.36"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
regex = "1"
glob = "0.3"
async-trait = "0.1"
microsandbox = { version = "0.4" }
sha2 = "0.10"
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "with-chrono"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
