[package]
name = "nous-cli"
version = "0.9.0"
edition.workspace = true

[[bin]]
name = "nous"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
nous-core = { path = "../nous-core" }
nous-daemon = { path = "../nous-daemon" }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
