[package]
name = "nous-cli"
version = "0.10.0"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "nous"
path = "src/main.rs"

[features]
sandbox = ["nous-daemon/sandbox"]

[dev-dependencies]
tempfile = "3"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
libc = "0.2"
nous-core = { path = "../nous-core" }
nous-daemon = { path = "../nous-daemon" }
reqwest = { workspace = true }
rig-core = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
