[package]
name = "nous-core"
version = "0.3.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
