[package]
name = "nous-core"
version = "0.8.1"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = "1"
rusqlite = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
