[package]
name = "nous-core"
version = "0.10.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
rig-core = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
async-trait = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
nous-migration = { path = "../nous-migration" }

[dev-dependencies]
proptest = "1"
rusqlite = { workspace = true }
sea-orm = { workspace = true }
temp-env = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
