[package]
name = "nous-daemon"
version = "0.7.0"
edition.workspace = true

[dependencies]
axum = "0.8"
chrono = { workspace = true }
libc = "0.2"
nous-core = { path = "../nous-core" }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
