[package]
name = "nous-daemon"
version = "0.10.0"
edition.workspace = true

[dependencies]
axum = "0.8"
chrono = { workspace = true }
dirs = { workspace = true }
futures = "0.3"
libc = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
nous-core = { path = "../nous-core" }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
aws-config = { version = "1.8", features = ["behavior-version-latest", "sso"] }
rig-bedrock = "0.4.5"
rig-core = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

microsandbox = { workspace = true, optional = true }
rig-qdrant = { version = "0.2.5", optional = true }

[features]
default = []
sandbox = ["microsandbox"]
qdrant = ["dep:rig-qdrant"]

[dev-dependencies]
http-body-util = "0.1"
temp-env = "0.3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
