[package]
name = "nous-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "nous-mcp"
path = "src/main.rs"

[dependencies]
nous-core = { path = "../nous-core" }
nous-shared = { path = "../nous-shared" }
rmcp = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["client"] }
