[package]
name = "nous-otlp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "nous-otlp"
path = "src/main.rs"

[dependencies]
nous-shared = { path = "../nous-shared" }
axum = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
opentelemetry-proto = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
