[package]
name = "nous-pcl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "nous_pcl"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
