[package]
name = "nous-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "nous_shared"

[dependencies]
rand = "0.9"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
