[package]
name = "e2e-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[dev-dependencies]
nous-core = { path = "../../crates/nous-core" }
nous-otlp = { path = "../../crates/nous-otlp" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
